platform/public/dm-modules/dm-wavesurfer/dm-wavesurfer.less
.dm-wavesurfer {
    position: relative; 
    bottom: 0;
    width: 100%;
    height: 25px;
    left: 0;
}

.dm-wavesurfer-range {
    height: 100%;
    background-color: rgb(25,25,25);
    position: absolute;
   

    -webkit-transition: left 0.3s ease-in-out;
    -moz-transition: left 0.3s ease-in-out;
    -o-transition: left 0.3s ease-in-out;
    transition: left 0.3s ease-in-out;

    -webkit-transition: width 0.3s ease-in-out;
    -moz-transition: width 0.3s ease-in-out;
    -o-transition: width 0.3s ease-in-out;
    transition: width 0.3s ease-in-out;
}

.dm-wavesurfer-position {
    height: 100%;
    background-color: rgba(86, 171, 205, 0.75);
    border-right: 2px solid rgb(86, 171, 205);
    position: absolute;
    left: 0;
    z-index: 10;

    -webkit-transition: width 0.1s ease-in-out;
    -moz-transition: width 0.1s ease-in-out;
    -o-transition: width 0.1s ease-in-out;
    transition: width 0.1s ease-in-out;

}

